add README + documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,18 +1,24 @@
+---
+output: github_document
+---
 
-optinterv: optimal intervention
-===============================
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+#optinterv: optimal intervention
 
 An R package that implemnts the method proposed by Danieli, Devi and Fryer (2019), to identify the factors with the greatest potential to increase a pre-specified outcome, using observational data.
 
-Installation
-------------
+##Installation
 
 Currently, the package can be installed through GitHub:
 
-``` r
+```{r, message=FALSE}
 #install.packages("devtools")
 devtools::install_github("eladg9/optinterv")
 ```
 
-References
-----------
+##References
+
+
