--- a/README.Rmd
+++ b/README.Rmd
@@ -27,8 +27,7 @@ Or the development version from GitHub:
 devtools::install_github("eladg9/optinterv")
 ```
 
-##Useage Example
-
+##Usage Example
 ```{r, message=FALSE, eval=FALSE}
 library(optinterv)
 #generate data
