--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ install.packages("optinterv")
 Or the development version from GitHub:
 ```{r, message=FALSE, eval=FALSE}
 #install.packages("devtools")
-devtools::install_github("eladg9/optinterv")
+devtools::install_github("eladg9/optinterv/r-package")
 ```
 
 ##Usage Example
