--- a/development.Rmd
+++ b/development.Rmd
@@ -9,4 +9,6 @@ knitr::opts_chunk$set(echo = TRUE)
 #Thoughts for the next version:
 1. Change the metric for ordered/unordered categorical variables (CDF distance is more suitable for continuous variables).
 
+2. Validate that there is no multicollinearity problem with the controls (this throws an error).
+
 
